overflow fixed

--- a/src/components/home/style.css
+++ b/src/components/home/style.css
@@ -1,6 +1,7 @@
 .home {
   height: 100vh;
   max-height: 750px;
+  position: relative;
 }
 
 @media screen and (max-width: 576px) {
