--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 html,
 body,
 :root {
-  width: 100%;
+  width: 100vw;
   overflow-x: hidden;
 }
 
@@ -155,15 +155,6 @@ img {
 @media screen and (max-width: 576px) {
   .container {
     padding: 0 1rem;
-  }
-  .sticky {
-    backdrop-filter: blur(5px);
-    background: linear-gradient(
-      0deg,
-      rgba(6, 62, 62, 0.689) 0%,
-      rgba(0, 0, 0, 0.704) 100%
-    );
-    padding: 1.2rem 0;
   }
   .custom-btn {
     font-weight: 800;
